# ChessBot-Battleground

./: .gitignore  LICENSE  README.md  eval_test.py  example_stockfish_datagen.py  launch_app.py  pyproject.toml  requirements.txt
app/: app.py
chessbot/: __init__.py  cli.py  common.py  config.py  config.yaml
chessbot/app/: __init__.py  app.py
chessbot/data/: __init__.py  dataset.py  download.py  filter_pgn.py  lichess_puzzles.py  stockfish_annotator.py  stockfish_datagen.py  utils.py
chessbot/inference/: __init__.py  evaluate.py  inference.py  play.py
chessbot/mcts/: __init__.py  benchmark.py  fast_search.py  search.py  train_mcts.py  train_utils.py
chessbot/models/: __init__.py  base.py  registry.py
chessbot/train/: __init__.py  config.py  config.yaml  evaluate.py  trainer.py  utils.py
chessbot/training/: config.py  config.yaml  trainer.py  warmup.py
chessbot/utils/: utils.py
examples/: README.md  example_inference.ipynb  example_sf_datagen.ipynb  example_train_eval.ipynb  run_evaluation.py  run_model_comparison.py  run_selfplay.py  tutorial_usage_and_tips.md
examples/example_model/: config.yaml  example_inference.ipynb  example_train_eval.ipynb  example_training.ipynb  simple_chessnet.py
examples/model_example/: simple_chessnet.py  train_notebook.ipynb
hub/example_model/: config.yaml  simple_chessnet.py
models/: README.md
models/example_chessbot/: README.md  config.yaml  evaluate.py  evaluate.sh  infer.py  train.py  (+2 more)
tests/: play_test.py
tutorials/: README.md  tutorial_sf_datagen.ipynb  tutorial_usage_and_tips.md
webapp/: app.py
(+22 files in other folders)
