[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chessbot"
version = "0.1.0"
description = "A PyTorch-based library for training chess neural networks on a gigantic chess dataset."
readme = "README.md"
authors = [
    { name = "Keith Gordon", email = "keith.gordon9@gmail.com" }
]
license = { file = "LICENSE" }
keywords = ["chess", "machine-learning", "pytorch", "deep-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
    "numpy",
    "pyyaml>=6.0",
    "wandb>=0.12.0"
]

[project.urls]
Homepage = "https://github.com/yourusername/ChessBot-Battleground"
Source = "https://github.com/yourusername/ChessBot-Battleground"
Tracker = "https://github.com/yourusername/ChessBot-Battleground/issues"

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
chessbot = "chessbot.cli:app"